<resources>
    <string name="app_name">AppLavanderia</string>
    <string name="botao_Login">Login</string>
    <string name="efetuar_Cadastro">Efetuar Cadastro</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">LIwlfqas7AeHrYcXj3AB6TXXEAJCgZu3SgM6dPAN</string>
    <string name="back4app_client_key">N5p1SWlkfRfON9YCQjNrK608bDQOPeGeeEl4UFvX</string>
    <string name="TextoCadastro">Não tem conta? Crie uma</string>
    <string name="botao_Cadastrar">Cadastrar</string>
    <string name="texto_Usuario">Digite seu Usuário</string>
    <string name="texto_email">Digite seu e-mail</string>
    <string name="texto_Senha">Digite sua senha</string>
    <string name="texto_Cadastro">Não tem conta? Crie uma</string>
    <string name="texto_Login">Já tem uma conta? Faça o Login</string>
    <string name="texto_Cpf">Digite seu CPF</string>
    <string name="texto_Numero">Digite seu Número de telefone</string>
    <string name="action_Configuracoes">Configurações</string>
    <string name="action_Sair">Sair</string>
    <string name="action_Limpar">Limpar</string>
    <string name="action_Voltar">Voltar</string>
    <string name="Texto_TipoLavagem1">Lavagem simples</string>
    <string name="texto_TipoLavagem2">Lavagem Completa</string>
    <string name="texto_Titulo">Carrinho</string>
    <string name="texto_Deletar">Excluir conta</string>
    <string name="botao_Excluir">Excluir Conta</string>
    <string name="Texto_Trocar_Email">Alterar e-mail</string>
    <string name="botao_Alterar">Alterar</string>
    <string name="botao_Trocar_Email">Trocar e-mail</string>
    <string name="texto_Resumo">Resumo dos valores</string>
    <string name="texto_Real">R$</string>
    <string name="texto_SubTotal">Subtotal</string>
    <string name="texto_Entrega">Taxa de entrega</string>
    <string name="texto_TaxaEntrega">6,99</string>
    <string name="texto_Total">Total</string>
    <string name="botao_Pedido">Fazer Pedido</string>

</resources>